Intégration de la grille

--- a/index.html
+++ b/index.html
@@ -8,6 +8,96 @@
     <link rel="stylesheet" href="css/main.css" />
   </head>
   <body>
-    <h1>Hello world</h1>
+    <header>
+      <div class="container">
+        <div class="row">
+          <div class="col-9">logo</div>
+          <div class="col-3">menu</div>
+        </div>
+      </div>
+    </header>
+    <main>
+      <div class="container">
+        <div class="row">
+          <div class="col-12">img</div>
+        </div>
+      </div>
+      <div class="container">
+        <div class="row">
+          <div class="col-12">titre</div>
+          <div class="col-12">texte</div>
+        </div>
+      </div>
+      <div class="container">
+        <div class="row">
+          <div class="col-12">separation</div>
+        </div>
+      </div>
+      <div class="container">
+        <div class="row">
+          <div class="col-12">titre</div>
+        </div>
+        <div class="row">
+          <div class="col-12">img ev.</div>
+          <div class="col-12">titre ev.</div>
+          <div class="col-12">date ev.</div>
+          <div class="col-12">texte ev.</div>
+        </div>
+        <div class="row">
+          <div class="col-12">img ev.</div>
+          <div class="col-12">titre ev.</div>
+          <div class="col-12">date ev.</div>
+          <div class="col-12">texte ev.</div>
+        </div>
+      </div>
+      <div class="container">
+        <div class="row">
+          <div class="col-12">separation</div>
+        </div>
+      </div>
+      <div class="container">
+        <div class="row">
+          <div class="col-12">titre</div>
+          <div class="col-6">entrée</div>
+          <div class="col-6">plat</div>
+          <div class="col-6">plat p.</div>
+          <div class="col-6">plat</div>
+          <div class="col-6">dessert</div>
+          <div class="col-6">plat</div>
+        </div>
+      </div>
+      <div class="container">
+        <div class="row">
+          <div class="col-12">separation</div>
+        </div>
+      </div>
+      <div class="container">
+        <div class="row">
+          <div class="col-12">titre</div>
+          <div class="col-6">jours</div>
+          <div class="col-3">heure</div>
+          <div class="col-3">heure</div>
+          <div class="col-6">jours</div>
+          <div class="col-3">heure</div>
+          <div class="col-3">heure</div>
+          <div class="col-6">jours</div>
+          <div class="col-3">heure</div>
+          <div class="col-3">heure</div>
+        </div>
+      </div>
+      <div class="container">
+        <div class="row">
+          <div class="col-12">button</div>
+        </div>
+      </div>
+    </main>
+    <footer>
+      <div class="container">
+        <div class="row">
+          <div class="col-12">logo</div>
+          <div class="col-12">contacte</div>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
