ajout des images

--- a/index.html
+++ b/index.html
@@ -11,15 +11,21 @@
     <header>
       <div class="container">
         <div class="row">
-          <div class="col-9">logo</div>
-          <div class="col-3">menu</div>
+          <div class="col-9">
+            <img src="img/logo.svg" alt="Le Roi Pigeon" />
+          </div>
+          <div class="col-3">
+            <img src="img/menu-beurger.png" alt="menu" />
+          </div>
         </div>
       </div>
     </header>
     <main>
       <div class="container">
         <div class="row">
-          <div class="col-12">img</div>
+          <div class="col-12">
+            <img src="img/resto.png" alt="restaurant le roi pigeon" />
+          </div>
         </div>
       </div>
       <div class="container">
@@ -38,13 +44,17 @@
           <div class="col-12">titre</div>
         </div>
         <div class="row">
-          <div class="col-12">img ev.</div>
+          <div class="col-12">
+            <img src="img/violon.png" alt="violon" />
+          </div>
           <div class="col-12">titre ev.</div>
           <div class="col-12">date ev.</div>
           <div class="col-12">texte ev.</div>
         </div>
         <div class="row">
-          <div class="col-12">img ev.</div>
+          <div class="col-12">
+            <img src="img/verre.png" alt="verre sur un bar" />
+          </div>
           <div class="col-12">titre ev.</div>
           <div class="col-12">date ev.</div>
           <div class="col-12">texte ev.</div>
@@ -94,7 +104,9 @@
     <footer>
       <div class="container">
         <div class="row">
-          <div class="col-12">logo</div>
+          <div class="col-12">
+            <img src="img/logo.svg" alt="Le Roi Pigeon" />
+          </div>
           <div class="col-12">contacte</div>
         </div>
       </div>
