ajout des breakpoints large

--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
     <header>
       <div class="container">
         <div class="row">
-          <div class="col-9">
+          <div class="col-9 col-lg-6">
             <img src="img/logo.svg" alt="Le Roi Pigeon" />
           </div>
-          <div class="col-3">
+          <div class="col-3 col-lg-6">
             <img src="img/menu-beurger.png" alt="menu" />
           </div>
         </div>
@@ -30,84 +30,89 @@
       </div>
       <div class="container">
         <div class="row">
-          <div class="col-12">titre</div>
-          <div class="col-12">texte</div>
+          <div class="col-12 col-lg-5">titre</div>
+          <div class="col-12 col-lg-7">texte</div>
+        </div>
+      </div>
+      <div class="container">
+        <div class="row justify-content-center">
+          <div class="col-12 col-lg-8">separation</div>
         </div>
       </div>
       <div class="container">
         <div class="row">
-          <div class="col-12">separation</div>
-        </div>
-      </div>
-      <div class="container">
-        <div class="row">
           <div class="col-12">titre</div>
         </div>
         <div class="row">
-          <div class="col-12">
+          <div class="col-12 col-lg-6">
             <img src="img/violon.png" alt="violon" />
           </div>
-          <div class="col-12">titre ev.</div>
-          <div class="col-12">date ev.</div>
-          <div class="col-12">texte ev.</div>
-        </div>
-        <div class="row">
-          <div class="col-12">
-            <img src="img/verre.png" alt="verre sur un bar" />
+          <div class="col-12 col-lg-4">
+            titre ev. <br />
+            date ev. <br />
+            texte ev.
           </div>
-          <div class="col-12">titre ev.</div>
-          <div class="col-12">date ev.</div>
-          <div class="col-12">texte ev.</div>
         </div>
       </div>
       <div class="container">
-        <div class="row">
-          <div class="col-12">separation</div>
-        </div>
-      </div>
-      <div class="container">
-        <div class="row">
-          <div class="col-12">titre</div>
-          <div class="col-6">entrée</div>
-          <div class="col-6">plat</div>
-          <div class="col-6">plat p.</div>
-          <div class="col-6">plat</div>
-          <div class="col-6">dessert</div>
-          <div class="col-6">plat</div>
-        </div>
-      </div>
-      <div class="container">
-        <div class="row">
-          <div class="col-12">separation</div>
+        <div class="row justify-content-center">
+          <div class="col-12 col-lg-8">separation</div>
         </div>
       </div>
       <div class="container">
         <div class="row">
           <div class="col-12">titre</div>
-          <div class="col-6">jours</div>
-          <div class="col-3">heure</div>
-          <div class="col-3">heure</div>
-          <div class="col-6">jours</div>
-          <div class="col-3">heure</div>
-          <div class="col-3">heure</div>
-          <div class="col-6">jours</div>
-          <div class="col-3">heure</div>
-          <div class="col-3">heure</div>
+        </div>
+        <div class="row">
+          <div class="col-6 col-lg-4 offset-lg-1">entrée</div>
+          <div class="col-6 col-lg-2">plat</div>
+        </div>
+        <div class="row">
+          <div class="col-6 col-lg-4 offset-lg-1">plat p.</div>
+          <div class="col-6 col-lg-2">plat</div>
+        </div>
+        <div class="row">
+          <div class="col-6 col-lg-4 offset-lg-1">dessert</div>
+          <div class="col-6 col-lg-2">plat</div>
+        </div>
+      </div>
+      <div class="container">
+        <div class="row justify-content-center">
+          <div class="col-12 col-lg-8">separation</div>
         </div>
       </div>
       <div class="container">
         <div class="row">
-          <div class="col-12">button</div>
+          <div class="col-12">titre</div>
+          <div class="col-6 col-lg-4 offset-lg-1">jours</div>
+          <div class="col-3 col-lg-2">heure</div>
+          <div class="col-3 col-lg-2">heure</div>
+        </div>
+        <div class="row">
+          <div class="col-6 col-lg-4 offset-lg-1">jours</div>
+          <div class="col-3 col-lg-2">heure</div>
+          <div class="col-3 col-lg-2">heure</div>
+        </div>
+        <div class="row">
+          <div class="col-6 col-lg-4 offset-lg-1">jours</div>
+          <div class="col-3 col-lg-2">heure</div>
+          <div class="col-3 col-lg-2">heure</div>
+        </div>
+      </div>
+      <div class="container">
+        <div class="row justify-content-center">
+          <div class="col-12 col-lg-8">button</div>
         </div>
       </div>
     </main>
     <footer>
       <div class="container">
         <div class="row">
-          <div class="col-12">
+          <div class="col-12 col-lg-6">
             <img src="img/logo.svg" alt="Le Roi Pigeon" />
           </div>
-          <div class="col-12">contacte</div>
+          <div class="col-12 col-lg-3">contacte</div>
+          <div class="col-lg-3">contacte</div>
         </div>
       </div>
     </footer>
