ajout des couleurs et comportement de l'image dans la section évenement

--- a/index.html
+++ b/index.html
@@ -6,13 +6,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/bootstrap-grid.css" />
     <link rel="stylesheet" href="css/main.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Italiana&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <header>
       <div class="container">
         <div class="row">
           <div class="col-9 col-lg-6">
-            <img src="img/logo.svg" alt="Le Roi Pigeon" />
+            <h1>
+              <img src="img/logo.svg" alt="Le Roi Pigeon" />
+            </h1>
           </div>
           <div class="col-3 col-lg-6">
             <img src="img/menu-beurger.png" alt="menu" />
@@ -23,85 +31,145 @@
     <main>
       <div class="container">
         <div class="row">
-          <div class="col-12">
-            <img src="img/resto.png" alt="restaurant le roi pigeon" />
+          <div class="col-12 main-image-container">
+            <a href="#first-title">
+              <img class="main-image" src="img/down-button.png" alt="down" />
+            </a>
           </div>
         </div>
       </div>
       <div class="container">
         <div class="row">
-          <div class="col-12 col-lg-5">titre</div>
-          <div class="col-12 col-lg-7">texte</div>
+          <div class="col-12 col-lg-5">
+            <h2 id="first-title">C'est quoi le roi pigeon en fait ?</h2>
+          </div>
+          <div class="col-12 col-lg-7">
+            <p>
+              Le roi pigeons est un bar à pigeon. Lors de votre commande un
+              sachet de graine vous est offert pour nourrir les pigeons. Ainsi
+              le temps d’un café, d’un verre ou d’un repas, vous êtes accompagné
+              de vos pigeons préfère pour vous amuser avec et ne pas se sentir
+              seul ou avoir des délire marrant quand vous êtes avec vos amis. ;D
+            </p>
+          </div>
         </div>
       </div>
       <div class="container">
         <div class="row justify-content-center">
-          <div class="col-12 col-lg-8">separation</div>
+          <div class="col-12 col-lg-8">
+            <img src="img/separation.svg" alt="separation" />
+          </div>
         </div>
       </div>
       <div class="container">
         <div class="row">
-          <div class="col-12">titre</div>
+          <div class="col-12">
+            <h2>Évenement</h2>
+          </div>
         </div>
         <div class="row">
-          <div class="col-12 col-lg-6">
-            <img src="img/violon.png" alt="violon" />
+          <div class="col-12 col-lg-6 image-ev-container">
+            <img class="image-ev" src="img/violon.png" alt="violon" />
           </div>
           <div class="col-12 col-lg-4">
-            titre ev. <br />
-            date ev. <br />
-            texte ev.
+            <h3>Chant des oiseau</h3>
+            <p class="date-ev">14-16 Avril</p>
+            <p>
+              asseyez vous et dégustez un magnifique plat accompagné de musique
+              live inspirée par les beau chant d’oiseau que l’ont aime et
+              connais tous.
+            </p>
           </div>
         </div>
       </div>
       <div class="container">
         <div class="row justify-content-center">
-          <div class="col-12 col-lg-8">separation</div>
+          <div class="col-12 col-lg-8">
+            <img src="img/separation.svg" alt="separation" />
+          </div>
         </div>
       </div>
       <div class="container">
         <div class="row">
-          <div class="col-12">titre</div>
+          <div class="col-12">
+            <h2>Plat du jours</h2>
+          </div>
         </div>
         <div class="row">
-          <div class="col-6 col-lg-4 offset-lg-1">entrée</div>
-          <div class="col-6 col-lg-2">plat</div>
+          <div class="col-6 col-lg-4 offset-lg-1">
+            <h3>entrée</h3>
+          </div>
+          <div class="col-6 col-lg-2">
+            <p>salade cesar</p>
+          </div>
         </div>
         <div class="row">
-          <div class="col-6 col-lg-4 offset-lg-1">plat p.</div>
-          <div class="col-6 col-lg-2">plat</div>
+          <div class="col-6 col-lg-4 offset-lg-1">
+            <h3>plat principal</h3>
+          </div>
+          <div class="col-6 col-lg-2">
+            <p>soupe a la tomate & pain <br />burger & frites</p>
+          </div>
         </div>
         <div class="row">
-          <div class="col-6 col-lg-4 offset-lg-1">dessert</div>
-          <div class="col-6 col-lg-2">plat</div>
-        </div>
-      </div>
-      <div class="container">
-        <div class="row justify-content-center">
-          <div class="col-12 col-lg-8">separation</div>
-        </div>
-      </div>
-      <div class="container">
-        <div class="row">
-          <div class="col-12">titre</div>
-          <div class="col-6 col-lg-4 offset-lg-1">jours</div>
-          <div class="col-3 col-lg-2">heure</div>
-          <div class="col-3 col-lg-2">heure</div>
-        </div>
-        <div class="row">
-          <div class="col-6 col-lg-4 offset-lg-1">jours</div>
-          <div class="col-3 col-lg-2">heure</div>
-          <div class="col-3 col-lg-2">heure</div>
-        </div>
-        <div class="row">
-          <div class="col-6 col-lg-4 offset-lg-1">jours</div>
-          <div class="col-3 col-lg-2">heure</div>
-          <div class="col-3 col-lg-2">heure</div>
+          <div class="col-6 col-lg-4 offset-lg-1">
+            <h3>dessert</h3>
+          </div>
+          <div class="col-6 col-lg-2">
+            <p>gâteau au chocolat & glace vanille</p>
+          </div>
         </div>
       </div>
       <div class="container">
         <div class="row justify-content-center">
-          <div class="col-12 col-lg-8">button</div>
+          <div class="col-12 col-lg-8">
+            <img src="img/separation.svg" alt="separation" />
+          </div>
+        </div>
+      </div>
+      <div class="container">
+        <div class="row">
+          <div class="col-12">
+            <h2>Heur d’ouverturey</h2>
+          </div>
+          <div class="col-6 col-lg-4 offset-lg-1">
+            <h3>lundi - mardi</h3>
+          </div>
+          <div class="col-3 col-lg-2">
+            <p>fermé</p>
+          </div>
+          <div class="col-3 col-lg-2">
+            <p>fermé</p>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-6 col-lg-4 offset-lg-1">
+            <h3>mercredi - vendredi</h3>
+          </div>
+          <div class="col-3 col-lg-2">
+            <p>11h à 14h</p>
+          </div>
+          <div class="col-3 col-lg-2">
+            <p>19h à 22h</p>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-6 col-lg-4 offset-lg-1">
+            <h3>samedi - dimanche</h3>
+          </div>
+          <div class="col-3 col-lg-2">
+            <p>fermé</p>
+          </div>
+          <div class="col-3 col-lg-2">
+            <p>19h à 00h</p>
+          </div>
+        </div>
+      </div>
+      <div class="container">
+        <div class="row justify-content-center">
+          <div class="col-12 col-lg-8">
+            <img src="img/reservation.svg" alt="reserver" />
+          </div>
         </div>
       </div>
     </main>
@@ -111,8 +179,9 @@
           <div class="col-12 col-lg-6">
             <img src="img/logo.svg" alt="Le Roi Pigeon" />
           </div>
-          <div class="col-12 col-lg-3">contacte</div>
-          <div class="col-lg-3">contacte</div>
+          <div class="col-lg-3">
+            <p>contacte</p>
+          </div>
         </div>
       </div>
     </footer>
