ajout du contenu de footer et marges

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
       <div class="container">
         <div class="row justify-content-center">
           <div class="col-12 col-lg-8">
-            <img src="img/separation.svg" alt="separation" />
+            <img class="separation" src="img/separation.svg" alt="separation" />
           </div>
         </div>
       </div>
@@ -72,7 +72,7 @@
             <img class="image-ev" src="img/violon.png" alt="violon" />
           </div>
           <div class="col-12 col-lg-4">
-            <h3>Chant des oiseau</h3>
+            <h3 class="title-ev">Chant des oiseau</h3>
             <p class="date-ev">14-16 Avril</p>
             <p>
               asseyez vous et dégustez un magnifique plat accompagné de musique
@@ -85,7 +85,7 @@
       <div class="container">
         <div class="row justify-content-center">
           <div class="col-12 col-lg-8">
-            <img src="img/separation.svg" alt="separation" />
+            <img class="separation" src="img/separation.svg" alt="separation" />
           </div>
         </div>
       </div>
@@ -123,7 +123,7 @@
       <div class="container">
         <div class="row justify-content-center">
           <div class="col-12 col-lg-8">
-            <img src="img/separation.svg" alt="separation" />
+            <img class="separation" src="img/separation.svg" alt="separation" />
           </div>
         </div>
       </div>
@@ -168,7 +168,7 @@
       <div class="container">
         <div class="row justify-content-center">
           <div class="col-12 col-lg-8">
-            <img src="img/reservation.svg" alt="reserver" />
+            <img class="reservation" src="img/reservation.svg" alt="reserver" />
           </div>
         </div>
       </div>
@@ -179,8 +179,20 @@
           <div class="col-12 col-lg-6">
             <img src="img/logo.svg" alt="Le Roi Pigeon" />
           </div>
-          <div class="col-lg-3">
-            <p>contacte</p>
+          <div class="col-lg-3 contacte-container">
+            <a href="blank">Se Conecter</a>
+            <a href="blank">Réservation</a>
+            <a href="blank">
+              rue du Pain-Levant 11 1630 Bulle, Fribourg Suisse
+            </a>
+            <a href="mailto:leroipigeon@gmail.ch">leroipigeon@gmail.ch</a>
+            <a href="tel:+41 79 691 09 96">+41 79 xxx xx xx</a>
+            <a href="https://www.instagram.com" target="_blank">
+              <img src="img/insta.png" alt="instagram" />
+            </a>
+            <a href="https://www.facebook.com" target="_blank">
+              <img src="img/facebook.png" alt="facebook" />
+            </a>
           </div>
         </div>
       </div>
