--- a/index.html
+++ b/index.html
@@ -29,12 +29,14 @@
       </div>
     </header>
     <main>
-      <div class="container">
-        <div class="row">
-          <div class="col-12 main-image-container">
-            <a href="#first-title">
-              <img class="main-image" src="img/down-button.png" alt="down" />
-            </a>
+      <div class="banner">
+        <div class="container">
+          <div class="row">
+            <div class="col-12 main-image-container">
+              <a href="#first-title">
+                <img class="main-image" src="img/down-button.png" alt="down" />
+              </a>
+            </div>
           </div>
         </div>
       </div>
@@ -73,11 +75,33 @@
           </div>
           <div class="col-12 col-lg-4">
             <h3 class="title-ev">Chant des oiseau</h3>
+            <div class="border-bottom col-4 offset-lg-1"></div>
             <p class="date-ev">14-16 Avril</p>
             <p>
               asseyez vous et dégustez un magnifique plat accompagné de musique
               live inspirée par les beau chant d’oiseau que l’ont aime et
               connais tous.
+            </p>
+          </div>
+        </div>
+      </div>
+      <div class="container">
+        <div class="row">
+          <div class="col-12">
+            <h2>Évenement</h2>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-12 col-lg-6 image-ev-container">
+            <img class="image-ev" src="img/verre.png" alt="violon" />
+          </div>
+          <div class="col-12 col-lg-4">
+            <h3 class="title-ev">Glass show</h3>
+            <div class="border-bottom col-4 offset-lg-1"></div>
+            <p class="date-ev">12-14 Mai</p>
+            <p>
+              laissé vous impressionné par le tallant de nos barman. un
+              spectacle inouï de jonglage et un service incroyable.
             </p>
           </div>
         </div>
@@ -103,6 +127,7 @@
             <p>salade cesar</p>
           </div>
         </div>
+        <div class="border-bottom col-4 offset-lg-1"></div>
         <div class="row">
           <div class="col-6 col-lg-4 offset-lg-1">
             <h3>plat principal</h3>
@@ -111,6 +136,7 @@
             <p>soupe a la tomate & pain <br />burger & frites</p>
           </div>
         </div>
+        <div class="border-bottom col-4 offset-lg-1"></div>
         <div class="row">
           <div class="col-6 col-lg-4 offset-lg-1">
             <h3>dessert</h3>
@@ -142,6 +168,7 @@
             <p>fermé</p>
           </div>
         </div>
+        <div class="border-bottom col-4 offset-lg-1"></div>
         <div class="row">
           <div class="col-6 col-lg-4 offset-lg-1">
             <h3>mercredi - vendredi</h3>
@@ -153,6 +180,7 @@
             <p>19h à 22h</p>
           </div>
         </div>
+        <div class="border-bottom col-4 offset-lg-1"></div>
         <div class="row">
           <div class="col-6 col-lg-4 offset-lg-1">
             <h3>samedi - dimanche</h3>
@@ -168,7 +196,16 @@
       <div class="container">
         <div class="row justify-content-center">
           <div class="col-12 col-lg-8">
-            <img class="reservation" src="img/reservation.svg" alt="reserver" />
+            <a
+              href="https://titiyo-cretton.at-eikon.ch/test/menu.html"
+              target="_blank"
+            >
+              <img
+                class="reservation"
+                src="img/reservation.svg"
+                alt="reserver"
+              />
+            </a>
           </div>
         </div>
       </div>
@@ -190,6 +227,7 @@
             <a href="https://www.instagram.com" target="_blank">
               <img src="img/insta.png" alt="instagram" />
             </a>
+            <a href=""></a>
             <a href="https://www.facebook.com" target="_blank">
               <img src="img/facebook.png" alt="facebook" />
             </a>
