mise en page du footer, finalisiation des bordure doré dans les section "plat du jours" et "heur d'ouverture"

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
           </div>
           <div class="col-12 col-lg-4">
             <h3 class="title-ev">Chant des oiseau</h3>
-            <div class="border-bottom col-4 offset-lg-1"></div>
+            <div class="border-bottom col-6"></div>
             <p class="date-ev">14-16 Avril</p>
             <p>
               asseyez vous et dégustez un magnifique plat accompagné de musique
@@ -87,17 +87,12 @@
       </div>
       <div class="container">
         <div class="row">
-          <div class="col-12">
-            <h2>Évenement</h2>
-          </div>
-        </div>
-        <div class="row">
           <div class="col-12 col-lg-6 image-ev-container">
             <img class="image-ev" src="img/verre.png" alt="violon" />
           </div>
           <div class="col-12 col-lg-4">
             <h3 class="title-ev">Glass show</h3>
-            <div class="border-bottom col-4 offset-lg-1"></div>
+            <div class="border-bottom col-6"></div>
             <p class="date-ev">12-14 Mai</p>
             <p>
               laissé vous impressionné par le tallant de nos barman. un
@@ -123,25 +118,25 @@
           <div class="col-6 col-lg-4 offset-lg-1">
             <h3>entrée</h3>
           </div>
-          <div class="col-6 col-lg-2">
+          <div class="col-6">
             <p>salade cesar</p>
           </div>
         </div>
-        <div class="border-bottom col-4 offset-lg-1"></div>
+        <div class="border-bottom col-4 col-lg-2 offset-lg-1"></div>
         <div class="row">
           <div class="col-6 col-lg-4 offset-lg-1">
             <h3>plat principal</h3>
           </div>
-          <div class="col-6 col-lg-2">
+          <div class="col-6">
             <p>soupe a la tomate & pain <br />burger & frites</p>
           </div>
         </div>
-        <div class="border-bottom col-4 offset-lg-1"></div>
+        <div class="border-bottom col-4 col-lg-2 offset-lg-1"></div>
         <div class="row">
           <div class="col-6 col-lg-4 offset-lg-1">
             <h3>dessert</h3>
           </div>
-          <div class="col-6 col-lg-2">
+          <div class="col-6">
             <p>gâteau au chocolat & glace vanille</p>
           </div>
         </div>
@@ -168,7 +163,7 @@
             <p>fermé</p>
           </div>
         </div>
-        <div class="border-bottom col-4 offset-lg-1"></div>
+        <div class="border-bottom col-4 col-lg-2 offset-lg-1"></div>
         <div class="row">
           <div class="col-6 col-lg-4 offset-lg-1">
             <h3>mercredi - vendredi</h3>
@@ -180,7 +175,7 @@
             <p>19h à 22h</p>
           </div>
         </div>
-        <div class="border-bottom col-4 offset-lg-1"></div>
+        <div class="border-bottom col-4 col-lg-2 offset-lg-1"></div>
         <div class="row">
           <div class="col-6 col-lg-4 offset-lg-1">
             <h3>samedi - dimanche</h3>
@@ -211,24 +206,43 @@
       </div>
     </main>
     <footer>
-      <div class="container">
+      <div class="container contact">
         <div class="row">
           <div class="col-12 col-lg-6">
-            <img src="img/logo.svg" alt="Le Roi Pigeon" />
+            <img src="img/logo.svg" alt="Le Roi Pigeon" class="logo-footer" />
           </div>
-          <div class="col-lg-3 contacte-container">
-            <a href="blank">Se Conecter</a>
-            <a href="blank">Réservation</a>
-            <a href="blank">
-              rue du Pain-Levant 11 1630 Bulle, Fribourg Suisse
-            </a>
-            <a href="mailto:leroipigeon@gmail.ch">leroipigeon@gmail.ch</a>
-            <a href="tel:+41 79 691 09 96">+41 79 xxx xx xx</a>
-            <a href="https://www.instagram.com" target="_blank">
+          <div class="col-12 col-lg-3">
+            <p>
+              <a href="blank">Se Conecter</a>
+            </p>
+            <p>
+              <a href="blank">Réservation</a>
+            </p>
+            <p>
+              <a href="blank">
+                rue du Pain-Levant 11 1630 Bulle, Fribourg Suisse
+              </a>
+            </p>
+          </div>
+          <div class="col-12 col-lg-3">
+            <p>
+              <a href="mailto:leroipigeon@gmail.ch">leroipigeon@gmail.ch</a>
+            </p>
+            <p>
+              <a href="tel:+41 79 691 09 96">+41 79 xxx xx xx</a>
+            </p>
+            <a
+              href="https://www.instagram.com"
+              target="_blank"
+              class="link-image link-image-spacing"
+            >
               <img src="img/insta.png" alt="instagram" />
             </a>
-            <a href=""></a>
-            <a href="https://www.facebook.com" target="_blank">
+            <a
+              href="https://www.facebook.com"
+              target="_blank"
+              class="link-image"
+            >
               <img src="img/facebook.png" alt="facebook" />
             </a>
           </div>
