debut du burger menu

--- a/index.html
+++ b/index.html
@@ -22,8 +22,19 @@
               <img src="img/logo.svg" alt="Le Roi Pigeon" />
             </h1>
           </div>
-          <div class="col-3 col-lg-6">
-            <img src="img/menu-beurger.png" alt="menu" />
+          <div class="col-3 col-lg-6 relative">
+            <div class="burger">
+              <div></div>
+              <div></div>
+              <div></div>
+            </div>
+            <div class="menu">
+              <ul>
+                <li><a href="#">Lien 1</a></li>
+                <li><a href="#">Lien 2</a></li>
+                <li><a href="#">Lien 3</a></li>
+              </ul>
+            </div>
           </div>
         </div>
       </div>
@@ -47,7 +58,7 @@
           </div>
           <div class="col-12 col-lg-7">
             <p>
-              Le roi pigeons est un bar à pigeon. Lors de votre commande un
+              Le roi pigeon est un bar à pigeon. Lors de votre commande un
               sachet de graine vous est offert pour nourrir les pigeons. Ainsi
               le temps d’un café, d’un verre ou d’un repas, vous êtes accompagné
               de vos pigeons préfère pour vous amuser avec et ne pas se sentir
@@ -78,9 +89,9 @@
             <div class="border-bottom col-6"></div>
             <p class="date-ev">14-16 Avril</p>
             <p>
-              asseyez vous et dégustez un magnifique plat accompagné de musique
-              live inspirée par les beau chant d’oiseau que l’ont aime et
-              connais tous.
+              Asseyez-vous et dégustez un magnifique plat accompagné de musique
+              live inspirée par les beaux chants d’oiseau que l’on aime et
+              connait tous.
             </p>
           </div>
         </div>
@@ -95,7 +106,7 @@
             <div class="border-bottom col-6"></div>
             <p class="date-ev">12-14 Mai</p>
             <p>
-              laissé vous impressionné par le tallant de nos barman. un
+              Laissez-vous impressionner par le talent de nos barmans: un
               spectacle inouï de jonglage et un service incroyable.
             </p>
           </div>
@@ -111,7 +122,7 @@
       <div class="container">
         <div class="row">
           <div class="col-12">
-            <h2>Plat du jours</h2>
+            <h2>Plat du jour</h2>
           </div>
         </div>
         <div class="row">
@@ -119,7 +130,7 @@
             <h3>entrée</h3>
           </div>
           <div class="col-6">
-            <p>salade cesar</p>
+            <p>salade césar</p>
           </div>
         </div>
         <div class="border-bottom col-4 col-lg-2 offset-lg-1"></div>
@@ -151,7 +162,7 @@
       <div class="container">
         <div class="row">
           <div class="col-12">
-            <h2>Heur d’ouverturey</h2>
+            <h2>Heures d’ouverture</h2>
           </div>
           <div class="col-6 col-lg-4 offset-lg-1">
             <h3>lundi - mardi</h3>
@@ -220,7 +231,7 @@
             </p>
             <p>
               <a href="blank">
-                rue du Pain-Levant 11 1630 Bulle, Fribourg Suisse
+                Rue du Pain-Levant 11 1630 Bulle, Fribourg Suisse
               </a>
             </p>
           </div>
@@ -249,5 +260,6 @@
         </div>
       </div>
     </footer>
+    <script src="js/main.js"></script>
   </body>
 </html>
