centrer le text des section "plat du jours" et "heures d'ouverture"

--- a/index.html
+++ b/index.html
@@ -30,9 +30,14 @@
             </div>
             <div class="menu">
               <ul>
-                <li><a href="#">Lien 1</a></li>
-                <li><a href="#">Lien 2</a></li>
-                <li><a href="#">Lien 3</a></li>
+                <li><a href="#">connexion</a></li>
+                <li><a href="#">menu</a></li>
+                <li><a href="#">commander</a></li>
+                <li>
+                  <a class="francais" href="#">FR</a>
+                  <br />
+                  <a class="deutch" href="#">DE</a>
+                </li>
               </ul>
             </div>
           </div>
@@ -127,28 +132,30 @@
         </div>
         <div class="row">
           <div class="col-6 col-lg-4 offset-lg-1">
-            <h3>entrée</h3>
+            <h3 class="center-top-bottom">entrée</h3>
           </div>
           <div class="col-6">
-            <p>salade césar</p>
+            <p class="center-top-bottom">salade césar</p>
           </div>
         </div>
         <div class="border-bottom col-4 col-lg-2 offset-lg-1"></div>
         <div class="row">
           <div class="col-6 col-lg-4 offset-lg-1">
-            <h3>plat principal</h3>
+            <h3 class="center-top-bottom">plat principal</h3>
           </div>
           <div class="col-6">
-            <p>soupe a la tomate & pain <br />burger & frites</p>
+            <p class="center-top-bottom">
+              soupe a la tomate & pain <br />burger & frites
+            </p>
           </div>
         </div>
         <div class="border-bottom col-4 col-lg-2 offset-lg-1"></div>
         <div class="row">
           <div class="col-6 col-lg-4 offset-lg-1">
-            <h3>dessert</h3>
+            <h3 class="center-top-bottom">dessert</h3>
           </div>
           <div class="col-6">
-            <p>gâteau au chocolat & glace vanille</p>
+            <p class="center-top-bottom">gâteau au chocolat & glace vanille</p>
           </div>
         </div>
       </div>
@@ -165,37 +172,37 @@
             <h2>Heures d’ouverture</h2>
           </div>
           <div class="col-6 col-lg-4 offset-lg-1">
-            <h3>lundi - mardi</h3>
+            <h3 class="center-top-bottom">lundi - mardi</h3>
           </div>
           <div class="col-3 col-lg-2">
-            <p>fermé</p>
+            <p class="center-top-bottom">fermé</p>
           </div>
           <div class="col-3 col-lg-2">
-            <p>fermé</p>
+            <p class="center-top-bottom">fermé</p>
           </div>
         </div>
         <div class="border-bottom col-4 col-lg-2 offset-lg-1"></div>
         <div class="row">
           <div class="col-6 col-lg-4 offset-lg-1">
-            <h3>mercredi - vendredi</h3>
+            <h3 class="center-top-bottom">mercredi - vendredi</h3>
           </div>
           <div class="col-3 col-lg-2">
-            <p>11h à 14h</p>
+            <p class="center-top-bottom">11h à 14h</p>
           </div>
           <div class="col-3 col-lg-2">
-            <p>19h à 22h</p>
+            <p class="center-top-bottom">19h à 22h</p>
           </div>
         </div>
         <div class="border-bottom col-4 col-lg-2 offset-lg-1"></div>
         <div class="row">
           <div class="col-6 col-lg-4 offset-lg-1">
-            <h3>samedi - dimanche</h3>
+            <h3 class="center-top-bottom">samedi - dimanche</h3>
           </div>
           <div class="col-3 col-lg-2">
-            <p>fermé</p>
+            <p class="center-top-bottom">fermé</p>
           </div>
           <div class="col-3 col-lg-2">
-            <p>19h à 00h</p>
+            <p class="center-top-bottom">19h à 00h</p>
           </div>
         </div>
       </div>
