ajout des margin sur les bordures dans la section "evenement"

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
           </div>
           <div class="col-12 col-lg-4">
             <h3 class="title-ev">Chant des oiseau</h3>
-            <div class="border-bottom col-6"></div>
+            <div class="border-bottom border-bottom-margin col-6"></div>
             <p class="date-ev">14-16 Avril</p>
             <p>
               Asseyez-vous et dégustez un magnifique plat accompagné de musique
@@ -108,7 +108,7 @@
           </div>
           <div class="col-12 col-lg-4">
             <h3 class="title-ev">Glass show</h3>
-            <div class="border-bottom col-6"></div>
+            <div class="border-bottom border-bottom-margin col-6"></div>
             <p class="date-ev">12-14 Mai</p>
             <p>
               Laissez-vous impressionner par le talent de nos barmans: un
