menu burger et animation au survole

--- a/index.html
+++ b/index.html
@@ -31,8 +31,11 @@
             <div class="menu">
               <ul>
                 <li><a href="#">connexion</a></li>
+                <div class="border-bottom border-bottom-menu"></div>
                 <li><a href="#">menu</a></li>
+                <div class="border-bottom border-bottom-menu"></div>
                 <li><a href="#">commander</a></li>
+                <div class="border-bottom border-bottom-menu"></div>
                 <li>
                   <a class="francais" href="#">FR</a>
                   <br />
@@ -227,7 +230,12 @@
       <div class="container contact">
         <div class="row">
           <div class="col-12 col-lg-6">
-            <img src="img/logo.svg" alt="Le Roi Pigeon" class="logo-footer" />
+            <img
+              class="center-top-bottom"
+              src="img/logo.svg"
+              alt="Le Roi Pigeon"
+              class="logo-footer"
+            />
           </div>
           <div class="col-12 col-lg-3">
             <p>
