--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
       href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Italiana&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
+    />
   </head>
   <body>
     <header>
@@ -82,42 +86,86 @@
           </div>
         </div>
       </div>
+      <!-- <div class="container">
+        <div class="row">
+          <div class="col-12">
+            <h2>Évenement</h2>
+          </div>
+        </div>
+        <div class="slideshow-container">
+          <div class="row slide">
+            <div class="col-12 col-md-7 image-ev-container">
+              <img class="image-ev" src="img/violon.png" alt="violon" />
+            </div>
+            <div class="col-12 col-md-4">
+              <h3 class="title-ev">Chant des oiseau</h3>
+              <div class="border-bottom border-bottom-margin col-6"></div>
+              <p class="date-ev">14-16 Avril</p>
+              <p>
+                Asseyez-vous et dégustez un magnifique plat accompagné de
+                musique live inspirée par les beaux chants d’oiseau que l’on
+                aime et connait tous.
+              </p>
+            </div>
+          </div>
+          <div class="row slide">
+            <div class="col-12 col-md-7 image-ev-container">
+              <img class="image-ev" src="img/verre.png" alt="violon" />
+            </div>
+            <div class="col-12 col-md-4">
+              <h3 class="title-ev">Glass show</h3>
+              <div class="border-bottom border-bottom-margin col-6"></div>
+              <p class="date-ev">12-14 Mai</p>
+              <p>
+                Laissez-vous impressionner par le talent de nos barmans: un
+                spectacle inouï de jonglage et un service incroyable.
+              </p>
+            </div>
+          </div>
+          <a class="arrow prev" onclick="plusSlides(-1)">&#8592;</a>
+          <a class="arrow next" onclick="plusSlides(1)">&#8594;</a>
+        </div>
+      </div> -->
       <div class="container">
         <div class="row">
           <div class="col-12">
             <h2>Évenement</h2>
           </div>
         </div>
-        <div class="row">
-          <div class="col-12 col-lg-6 image-ev-container">
-            <img class="image-ev" src="img/violon.png" alt="violon" />
+        <div class="swiper">
+          <div class="swiper-wrapper">
+            <div class="row swiper-slide">
+              <div class="col-12 col-md-7 image-ev-container">
+                <img class="image-ev" src="img/violon.png" alt="violon" />
+              </div>
+              <div class="col-12 col-md-4">
+                <h3 class="title-ev">Chant des oiseau</h3>
+                <div class="border-bottom border-bottom-margin col-6"></div>
+                <p class="date-ev">14-16 Avril</p>
+                <p>
+                  Asseyez-vous et dégustez un magnifique plat accompagné de
+                  musique live inspirée par les beaux chants d’oiseau que l’on
+                  aime et connait tous.
+                </p>
+              </div>
+            </div>
+            <div class="row swiper-slide">
+              <div class="col-12 col-md-7 image-ev-container">
+                <img class="image-ev" src="img/verre.png" alt="violon" />
+              </div>
+              <div class="col-12 col-md-4">
+                <h3 class="title-ev">Glass show</h3>
+                <div class="border-bottom border-bottom-margin col-6"></div>
+                <p class="date-ev">12-14 Mai</p>
+                <p>
+                  Laissez-vous impressionner par le talent de nos barmans: un
+                  spectacle inouï de jonglage et un service incroyable.
+                </p>
+              </div>
+            </div>
           </div>
-          <div class="col-12 col-lg-4">
-            <h3 class="title-ev">Chant des oiseau</h3>
-            <div class="border-bottom border-bottom-margin col-6"></div>
-            <p class="date-ev">14-16 Avril</p>
-            <p>
-              Asseyez-vous et dégustez un magnifique plat accompagné de musique
-              live inspirée par les beaux chants d’oiseau que l’on aime et
-              connait tous.
-            </p>
-          </div>
-        </div>
-      </div>
-      <div class="container">
-        <div class="row">
-          <div class="col-12 col-lg-6 image-ev-container">
-            <img class="image-ev" src="img/verre.png" alt="violon" />
-          </div>
-          <div class="col-12 col-lg-4">
-            <h3 class="title-ev">Glass show</h3>
-            <div class="border-bottom border-bottom-margin col-6"></div>
-            <p class="date-ev">12-14 Mai</p>
-            <p>
-              Laissez-vous impressionner par le talent de nos barmans: un
-              spectacle inouï de jonglage et un service incroyable.
-            </p>
-          </div>
+          <div class="swiper-button-prev"></div>
+          <div class="swiper-button-next"></div>
         </div>
       </div>
       <div class="container">
@@ -231,10 +279,9 @@
         <div class="row">
           <div class="col-12 col-lg-6">
             <img
-              class="center-top-bottom"
+              class="center-top-bottom logo-footer"
               src="img/logo.svg"
               alt="Le Roi Pigeon"
-              class="logo-footer"
             />
           </div>
           <div class="col-12 col-lg-3">
@@ -275,6 +322,7 @@
         </div>
       </div>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script src="js/main.js"></script>
   </body>
 </html>
