finition du carouselle

--- a/index.html
+++ b/index.html
@@ -86,46 +86,6 @@
           </div>
         </div>
       </div>
-      <!-- <div class="container">
-        <div class="row">
-          <div class="col-12">
-            <h2>Évenement</h2>
-          </div>
-        </div>
-        <div class="slideshow-container">
-          <div class="row slide">
-            <div class="col-12 col-md-7 image-ev-container">
-              <img class="image-ev" src="img/violon.png" alt="violon" />
-            </div>
-            <div class="col-12 col-md-4">
-              <h3 class="title-ev">Chant des oiseau</h3>
-              <div class="border-bottom border-bottom-margin col-6"></div>
-              <p class="date-ev">14-16 Avril</p>
-              <p>
-                Asseyez-vous et dégustez un magnifique plat accompagné de
-                musique live inspirée par les beaux chants d’oiseau que l’on
-                aime et connait tous.
-              </p>
-            </div>
-          </div>
-          <div class="row slide">
-            <div class="col-12 col-md-7 image-ev-container">
-              <img class="image-ev" src="img/verre.png" alt="violon" />
-            </div>
-            <div class="col-12 col-md-4">
-              <h3 class="title-ev">Glass show</h3>
-              <div class="border-bottom border-bottom-margin col-6"></div>
-              <p class="date-ev">12-14 Mai</p>
-              <p>
-                Laissez-vous impressionner par le talent de nos barmans: un
-                spectacle inouï de jonglage et un service incroyable.
-              </p>
-            </div>
-          </div>
-          <a class="arrow prev" onclick="plusSlides(-1)">&#8592;</a>
-          <a class="arrow next" onclick="plusSlides(1)">&#8594;</a>
-        </div>
-      </div> -->
       <div class="container">
         <div class="row">
           <div class="col-12">
@@ -134,33 +94,37 @@
         </div>
         <div class="swiper">
           <div class="swiper-wrapper">
-            <div class="row swiper-slide">
-              <div class="col-12 col-md-7 image-ev-container">
-                <img class="image-ev" src="img/violon.png" alt="violon" />
-              </div>
-              <div class="col-12 col-md-4">
-                <h3 class="title-ev">Chant des oiseau</h3>
-                <div class="border-bottom border-bottom-margin col-6"></div>
-                <p class="date-ev">14-16 Avril</p>
-                <p>
-                  Asseyez-vous et dégustez un magnifique plat accompagné de
-                  musique live inspirée par les beaux chants d’oiseau que l’on
-                  aime et connait tous.
-                </p>
+            <div class="swiper-slide">
+              <div class="row">
+                <div class="col-12 col-md-7 image-ev-container">
+                  <img class="image-ev" src="img/violon.png" alt="violon" />
+                </div>
+                <div class="col-12 col-md-4">
+                  <h3 class="title-ev">Chant des oiseau</h3>
+                  <div class="border-bottom border-bottom-margin col-6"></div>
+                  <p class="date-ev">14-16 Avril</p>
+                  <p>
+                    Asseyez-vous et dégustez un magnifique plat accompagné de
+                    musique live inspirée par les beaux chants d’oiseau que l’on
+                    aime et connait tous.
+                  </p>
+                </div>
               </div>
             </div>
-            <div class="row swiper-slide">
-              <div class="col-12 col-md-7 image-ev-container">
-                <img class="image-ev" src="img/verre.png" alt="violon" />
-              </div>
-              <div class="col-12 col-md-4">
-                <h3 class="title-ev">Glass show</h3>
-                <div class="border-bottom border-bottom-margin col-6"></div>
-                <p class="date-ev">12-14 Mai</p>
-                <p>
-                  Laissez-vous impressionner par le talent de nos barmans: un
-                  spectacle inouï de jonglage et un service incroyable.
-                </p>
+            <div class="swiper-slide">
+              <div class="row">
+                <div class="col-12 col-md-7 image-ev-container">
+                  <img class="image-ev" src="img/verre.png" alt="violon" />
+                </div>
+                <div class="col-12 col-md-4">
+                  <h3 class="title-ev">Glass show</h3>
+                  <div class="border-bottom border-bottom-margin col-6"></div>
+                  <p class="date-ev">12-14 Mai</p>
+                  <p>
+                    Laissez-vous impressionner par le talent de nos barmans: un
+                    spectacle inouï de jonglage et un service incroyable.
+                  </p>
+                </div>
               </div>
             </div>
           </div>
